--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "net.h": "c",
         "ostream": "c",
-        "user.h": "c"
+        "user.h": "c",
+        "istream": "c",
+        "__mutex_base": "c",
+        "atomic": "c"
     }
 }
